<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

	<modelVersion>4.0.0</modelVersion>
	<groupId>com.zebrunner</groupId>
	<artifactId>carina-demo</artifactId>
	<version>1.0</version>
	<packaging>jar</packaging>
	<name>Carina Demo</name>
	<url>http://www.zebrunner.com/</url>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<carina-core_version>1.3.0</carina-core_version>
		<carina-dataprovider.version>1.2.4</carina-dataprovider.version>
		<carina-api.version>1.2.4</carina-api.version>
		<carina-aws-s3.version>1.2.5</carina-aws-s3.version>
		<carina-azure.version>1.2.5</carina-azure.version>
		<carina-appcenter.version>1.2.7</carina-appcenter.version>

		<java.version>21</java.version>
		<zebrunner-agent.version>1.9.8</zebrunner-agent.version>
		<suite>helloWorld</suite>
	</properties>

	<!--repositories>
		<repository>
			<id>zebrunner_snapshots</id>
			<name>zebrunner Snapshots</name>
			<url>https://public-nexus.zebrunner.com/repository/ce-snapshots/</url>
			<releases>
				<enabled>false</enabled>
			</releases>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</repository>
	</repositories-->

	<dependencies>
		<dependency>
			<groupId>com.zebrunner</groupId>
			<artifactId>carina-core</artifactId>
			<version>${carina-core_version}</version>
		</dependency>
		<dependency>
			<groupId>com.zebrunner</groupId>
			<artifactId>carina-dataprovider</artifactId>
			<version>${carina-dataprovider.version}</version>
			<exclusions>
				<exclusion>
					<groupId>org.testng</groupId>
					<artifactId>*</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>com.zebrunner</groupId>
			<artifactId>carina-api</artifactId>
			<version>${carina-api.version}</version>
		</dependency>
		<dependency>
			<groupId>com.zebrunner</groupId>
			<artifactId>carina-aws-s3</artifactId>
			<version>${carina-aws-s3.version}</version>
		</dependency>
		<dependency>
			<groupId>com.zebrunner</groupId>
			<artifactId>carina-azure</artifactId>
			<version>${carina-azure.version}</version>
		</dependency>
		<dependency>
			<groupId>com.zebrunner</groupId>
			<artifactId>carina-appcenter</artifactId>
			<version>${carina-appcenter.version}</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>1.7.30</version>
		</dependency>
		<!-- Log4j2 -->
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-api</artifactId>
			<version>2.17.1</version>
		</dependency>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-core</artifactId>
			<version>2.17.1</version>
		</dependency>

		<dependency>
			<!--we need it to reuse benefits of zebrunner testng agent for webdriver
				sesssion(s) declaration -->
			<groupId>net.bytebuddy</groupId>
			<artifactId>byte-buddy</artifactId>
			<version>1.14.5</version>
		</dependency>
		<dependency>
			<groupId>org.mybatis</groupId>
			<artifactId>mybatis</artifactId>
			<version>3.5.6</version>
		</dependency>
		<dependency>
			<groupId>org.postgresql</groupId>
			<artifactId>postgresql</artifactId>
			<version>42.5.5</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<version>1.18.36</version>
			<scope>provided</scope>
		</dependency>
		<!-- https://mvnrepository.com/artifact/io.github.bonigarcia/webdrivermanager -->
		<dependency>
			<groupId>io.github.bonigarcia</groupId>
			<artifactId>webdrivermanager</artifactId>
			<version>5.9.2</version>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>3.12.0</version>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.11.0</version>
				<configuration>
					<release>${java.version}</release>
					<source>21</source>
					<target>21</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
				<version>3.6.0</version>
				<executions>
					<execution>
						<id>copy</id>
						<phase>initialize</phase>
						<goals>
							<goal>copy</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<artifactItems>
						<artifactItem>
							<groupId>com.zebrunner</groupId>
							<artifactId>agent-core</artifactId>
							<version>${zebrunner-agent.version}</version>
							<outputDirectory>${project.build.directory}/agent</outputDirectory>
							<destFileName>zebrunner-agent.jar</destFileName>
						</artifactItem>
					</artifactItems>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.1.0</version>
				<configuration>
					<argLine>-javaagent:${project.build.directory}/agent/zebrunner-agent.jar</argLine>
					<useSystemClassLoader>false</useSystemClassLoader>
					<suiteXmlFiles>
						<suiteXmlFile>${project.build.directory}/test-classes/testng_suites/${suite}.xml</suiteXmlFile>
					</suiteXmlFiles>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>
